# gdlib

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  changelog.md  todo.md
.github/: CONTRIBUTING.md
.github/workflows/: pr_to_default.yml  release.yml
examples/: minimal.rs
scripts/: README.md  generate_default_match.py
src/: core.rs  deserialiser.rs  gdlevel.rs  lib.rs  rand.rs  serialiser.rs  tests.rs
src/gdobj/: defaults.rs  ids.rs  lookup.rs  misc.rs  mod.rs  triggers.rs
test_gmds/: All Object IDs.gmd  advrand test.gmd  level.gmd
