[package]
name = "gdlib"
version = "0.3.2"
edition = "2024"
build = "build.rs"

description = "Rust library for editing Geometry Dash savefiles"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ArrowSlashArrow/gdlib"
keywords = ["fast", "api"]
categories = ["encoding", "api-bindings", "games"]
readme = "README.md"
authors = ["ArrowSlashArrow arrowslasharrow.dev@gmail.com"]


[dependencies]
aho-corasick = "1.1.3"
anyhow = "1.0.102"
base64 = "0.22.1"
bitflags = "2.11.0"
crc32fast = "1.5.0"
dtoa = "1.0.10"
flate2 = { version = "1.1.2", features = ["zlib"] }
itoa = "1.0.15"
phf = { version = "0.13.1", features = ["macros"] }
plist = "1.7.4"
smallvec = "1.15.1"

[build-dependencies]
syn = { version = "2", features = ["full"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
